# useful-local-models-2026

./: .gitignore  LICENSE  README.md  advanced-techniques-guide.md  ai-assistance-policy.md  build_resources.py  canvas-course-setup.md  canvas-theme-module-useful-local-models.md  course-code-plan.md  index.html  local-deployment-guide.md  milestones-and-schedule.md  model-menu-and-compute.md  modern-tooling-map.md  nanochat-autoresearch-integration.md  project-format.md  project-ideas.md  project-tracks.md  reading-and-seminar-plan.md  rubric.md  student-project-brief.md  styles.css  teacher-overview.md  teacher-start-checklist.md  training-pipeline-spec.md
assignment-pages/: studium-final-report.md  studium-first-report.md  studium-literature-seminars.md  studium-peer-review-instructions.md  studium-philosophy-assignment.md  studium-popular-science-abstract.md  studium-progress-seminars.md  studium-project-presentation.md  studium-proposal-assignment.md  studium-proposal-presentation.md  studium-task-overview.md  studium-theme-description.md
course-code/: README.md  pyproject.toml
course-code/lmcourse/: __init__.py  cli.py
course-code/templates/: agent_program.md  artifact_manifest.yaml  dataset_card.md  eval.yaml  model_card.md  project.yaml  project_README.md  train.yaml
course-code/tests/: test_cli.py
demos/: README.md  common.py  run_all.py  verified-results.md
docs/: app.js  build_resources.py  index.html
examples/: README.md
resources/: local-deployment-guide.html  student-project-brief.html  studium-progress-seminars.html
site/: index.html  (+2 more)
(+112 files in other folders)
