[project]
name = "lmcourse"
version = "0.1.0"
description = "Utilities for the Local Runnable Language Models course theme"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lmcourse = "lmcourse.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

